# utility

./: CMakeLists.txt  README.md  main.c
.github/ISSUE_TEMPLATE/: bug_report.md  build.md  docs.md  feature-request.md  question-about-the-project.md  refactor.md
.github/workflows/: build.yml  docs.yml
cmake/: CommonFunctions.cmake
docs/: CMakeLists.txt  ERROR_DESCRIPTION.md
examples/: CMakeLists.txt  README.md
examples/basic_demo/: CMakeLists.txt  README.md
examples/basic_demo/sources/: main.cpp
headers/: Color.hpp  Event.hpp  Matrix.hpp  Quaternion.hpp  Ray.hpp  Vector.hpp  Vertex.hpp  color.hpp  error.hpp  file_logger.hpp  logger.hpp  rectangle.hpp  singleton.hpp  standard_logger.hpp  vector.hpp
headers/utility/: Vertex.hpp  demangle.hpp  ressource_manager.hpp
headers/utility/AssetManager/: AAssetManager.hpp  AndroidAssetManager.hpp  DefaultAssetManager.hpp  FIleAsset.hpp  FileAsset.hpp
headers/utility/asset_manager/: asset_manager.hpp  default_asset_manager.hpp  file_asset.hpp
headers/utility/event/: controller_button_event.hpp  controller_event.hpp  controller_motion_event.hpp  controller_thumb_rest_event.hpp  controller_thumb_stick_event.hpp  controller_trigger_event.hpp  event.hpp  hand_event.hpp  hand_pinch_event.hpp  hand_poke_event.hpp  keyboard_event.hpp  mouse_button_event.hpp  mouse_motion_event.hpp  palm_event.hpp  pose.hpp  quit_event.hpp  text_editing_event.hpp  text_input_event.hpp
headers/utility/graphic/: camera.hpp  color.hpp  field_of_view.hpp  glyph.hpp  material.hpp  mesh.hpp  orientation.hpp  pose.hpp  position.hpp  ray.hpp  scale.hpp  text.hpp  texture.hpp  vertex.hpp  view.hpp
headers/utility/graphics/: camera.hpp  color.hpp  mesh.hpp  position.hpp  ray.hpp  rotation.hpp  text.hpp  vertex.hpp
headers/utility/logging/: file_logger.hpp  loggable.hpp  logger.hpp  standard_logger.hpp
headers/utility/math/: camera.hpp  color.hpp  matrix.hpp  parallelepiped.hpp  quaternion.hpp  ray.hpp  rectangle.hpp  vector.hpp  vertex.hpp
sources/: Color.cpp  Event.cpp  Matrix.cpp  Quaternion.cpp  Ray.cpp  Vector.cpp  Vertex.cpp  color.cpp  file_logger.cpp  logger.cpp  rectangle.cpp  singleton.cpp  standard_logger.cpp  vector.cpp
sources/AssetManager/: AAssetManager.cpp  AndroidAssetManagerr.cpp  DefaultAssetManager.cpp  FileAsset.cpp
sources/asset_manager/: android_asset_manager.cpp  asset_manager.cpp  default_asset_manager.cpp  file_asset.cpp
sources/event/: controller_button_event.cpp  controller_event.cpp  controller_motion_event.cpp  controller_thumb_rest_event.cpp  controller_thumb_stick_event.cpp  controller_trigger_event.cpp  hand_event.cpp  hand_pinch_event.cpp  hand_poke_event.cpp  keyboard_event.cpp  mouse_button_event.cpp  mouse_motion_event.cpp  palm_event.cpp  quit_event.cpp  text_editing_event.cpp  text_input_event.cpp
sources/graphic/: camera.cpp  glyph.cpp  material.cpp  mesh.cpp  text.cpp  texture.cpp
sources/graphic/text/: font.cpp  font_sized.cpp  text.cpp  text_material.cpp
sources/graphics/: camera.cpp  color.cpp  mesh.cpp  position.cpp  ray.cpp  rotation.cpp  text.cpp  vertex.cpp
sources/graphics/font/: font.cpp  font_sized.cpp
sources/graphics/texture/: texture.cpp
sources/logging/: file_logger.cpp  logger.cpp  standard_logger.cpp
sources/math/: camera.cpp  color.cpp  parallelepiped.cpp  ray.cpp  rectangle.cpp  vertex.cpp
tests/: CMakeLists.txt
tests/assets/testAsset/: file2
tests/headers/: test_Event.hpp  test_color.hpp  test_demangle.hpp  test_rectangle.hpp  test_singleton.hpp  test_text.hpp  test_vector.hpp
tests/headers/asset_manager/: test_default_asset_manager.hpp
tests/headers/assetmanager/: test_default_asset_manager.hpp
tests/headers/event/: test_controller_event.hpp  test_event.hpp  test_keyboard_event.hpp  test_mouse_button_event.hpp  test_mouse_motion_event.hpp  test_quit_event.hpp  test_text_editing_event.hpp  test_text_input_event.hpp
tests/headers/graphic/: test_text.hpp
tests/headers/graphics/: test_position_rotation.hpp
tests/headers/logging/: test_file_logger.hpp  test_loggable.hpp  test_logger.hpp  test_standard_logger.hpp
tests/headers/math/: test_camera.hpp  test_color.hpp  test_parallelepiped.hpp  test_ray.hpp  test_rectangle.hpp  test_vector.hpp
tests/headers/performance/: test_performance.hpp
tests/sources/: test_Event.cpp  test_color.cpp  test_demangle.cpp  test_rectangle.cpp  test_singleton.cpp  test_text.cpp  test_vector.cpp
tests/sources/asset_manager/: test_default_asset_manager.cpp
tests/sources/assetmanager/: test_default_asset_manager.cpp
tests/sources/event/: test_controller_event.cpp  test_event.cpp  test_keyboard_event.cpp  test_mouse_button_event.cpp  test_mouse_motion_event.cpp  test_quit_event.cpp  test_text_editing_event.cpp  test_text_input_event.cpp
tests/sources/graphic/: test_text.cpp
tests/sources/graphics/: test_position_rotation.cpp
tests/sources/logging/: test_file_logger.cpp  test_loggable.cpp  test_logger.cpp  test_standard_logger.cpp
tests/sources/math/: test_camera.cpp  test_color.cpp  test_parallelepiped.cpp  test_ray.cpp  test_rectangle.cpp  test_vector.cpp
tests/sources/performance/: test_camera_performance.cpp  test_color_performance.cpp  test_event_performance.cpp  test_file_logger_performance.cpp  test_keyboard_event_performance.cpp  test_loggable_performance.cpp  test_logger_performance.cpp  test_mouse_button_event_performance.cpp  test_mouse_motion_event_performance.cpp  test_performance.cpp  (+7 more)
(+10 files in other folders)
